--- a/index.html
+++ b/index.html
@@ -28,6 +28,46 @@
                 ginásio em Huntington Beach, resolveram formar uma banda após saírem de um concerto da banda de projeção
                 local, Social Distortion.
             </p>
+            <p>
+                Mais tarde, Kevin "Noodles" Wasserman foi chamado para a banda pelo seu <span class="bold"> infame talento de conseguir bebidas alcoólicas</span> para os integrantes da banda, na época menores de idade.
+            </p>
+            <p>
+                Tocando sob o nome de Manic Subsdal, em 1985 a banda decide trocar de nome para <span class="bold"> The
+                Offspring</span>. Seu primeiro sigle, "I'll Be Waiting/Blackball", foi lançado no formato de vinil pela gravadora independente Black Label Recors e teve tiragem de mil cópias.
+            </p>
+            <p>
+                Seu álbum de estreia, The Offspring, foi lançado pela gravadora independente Nemisis Recors em 1989 e
+                prodizido por Thom Wilson, <span class="bold"> vendendo três mil cópias dessa estreia em vinil.</span>
+            </p>
+        </div>
+        <!-- Container de citação -->
+        <div class="quotes-container">
+            <blockquote>
+                "Vender mais de 10 milhões de álbum não é a prioridade, lançar algo que nos orgulhamos é."
+            </blockquote>
+            <p>Dexter Holland</p>
+        </div>
+        <!-- Curiosidade -->
+        <div class="curiosities-container">
+            <h2>Curiosidade da banda</h2>
+            <ul>
+                <li>O apelido de Noodles não vem do macarrão</li>
+                <li>Dexter é um <span class="bold"> piloto </span> licenciado</li>
+                <li>A primeira música da banda foi originda em um passeio de carro</li>
+                <li>A banda não gosta de fazer publicidade</li>
+            </ul>
+        </div>
+        <!-- Segunda citação -->
+        <div class="quotes-container">
+            <blockquote>
+                "Chance thrown <br>
+                Nothing's free <br>
+                Longing for what used to be <br>
+                Still, it's hard <br>
+                Hard to see <br>
+                Fragile lives, sharrere dreams"
+            </blockquote>
+            <p>The Offspring - The kids aren't alright</p>
         </div>
     </div>
     
